--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph Meta Tags (for previews on Twitter, Facebook, etc.) -->
     <meta property="og:title" content="L0CAL GALS READY T0 FVCK T0N!GHT🤬🔥">
     <meta property="og:description" content="">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://i.postimg.cc/MTbXndxN/Screenshot-20240515-030811-X.jpg">
     <meta property="og:type" content="website">
 
     <!-- Meta Refresh Redirect -->
